# transaction_categorizer

./: .gitignore  Makefile  README.md  categories.yaml  pyproject.toml
notebooks/: experiments.ipynb
transaction_categorizer/: config.py  main.py  models.py  parsers.py  prompts.py
