[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "transaction_categorizer"
version = "0.0.0"
description = "A transaction categorizer tool"
authors = ["Tony Liu <tony.liu.se@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
typer = {extras = ["all"], version = "^0.9.0"}
langchain = "^0.1.7"
langchain-openai = "^0.0.6"

[tool.poetry.group.notebook.dependencies]
ipykernel = "^6.29"

[tool.poetry.group.lint.dependencies]
ruff = "^0.1.5"

[tool.ruff]
extend-include = ["*.ipynb"]
